--- a/my_website/students.html
+++ b/my_website/students.html
@@ -1,19 +1,283 @@
-<!doctype html>
-	<html lang="en">
-	  <head>
-	    <meta charset="utf-8">
-	    <title>Portfolio</title>
-	  </head>
-	  <body>
- <form><input type="button" value="Home" onclick="window.location.href='index.html'">
-    <form><input type="button" value="Portfolio" onclick="window.location.href='portfolio.html'">
-    <form><input type="button" value="About Me" onclick="window.location.href='about_me.html'"></form>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.active.gif" height="250"><br>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+<!DOCTYPE html>
+<html>
+<title>KHS Computer Science Website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+    height: 100%;
+    color: #777;
+    line-height: 1.8;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+    background-image: url('/my_website/images/CE_King.jpg');
+    min-height: 100%;
+}
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("/my_website/images/king_panthers.jpg");
+    min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+    background-image: url("/my_website/images/binnumtunnel.jpg");
+    min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
+}
+</style>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar" id="myNavbar">
+    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+      <i class="fa fa-bars"></i>
     </a>
-	  </body>
-	</html>
+    <a href="#home" class="w3-bar-item w3-button">HOME</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT KHS COMPUTER SCIENCE</a>
+    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> STUDENT PAGES</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT THE TEACHER</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-graduation-cap"></i> BACK TO WHITELEY'S PAGE</a>
+    </a>
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT KHS COMPUTER SCIENCE</a>
+    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">STUDENT PAGES</a>
+    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT THE TEACHER</a>
+  </div>
+</div>
+
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">KHS <span class="w3-hide-small">CSP</span> STUDENTS</span>
+  </div>
+</div>
+
+<!-- Container (About Section) -->
+<div class="w3-content w3-container w3-padding-64" id="about">
+  <h3 class="w3-center">ABOUT KHS COMPUTER SCEINCE</h3>
+  <p class="w3-center"><em>We love computer science</em></p>
+  <p>Computer Science Principles introduces students to the foundational concepts of the field and challenges them to explore how computing and technology can impact the world.</p>
+  <div class="w3-row">
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <p><b><i class="fa fa-desktop w3-margin-right"></i>Computer Science Principles</b></p><br>
+      <img src="/my_website/images/pltw_m_p_3c.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+    </div>
+
+    <!-- Hide this text on small devices -->
+    <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <p>Welcome to the class website. It is desinged to showcase the work of Computer Science Principles.</p>
+      <p>Whether it’s 3-D animation, engineering, music, app development, medicine, visual design, robotics, or political analysis, computer science is the engine that powers the technology, productivity, and innovation that drive the world. Computer science experience has become an imperative for today’s students and the workforce of tomorrow. Computer Science Principles has been developed with the goal of creating leaders in computer science fields and attracting and engaging those who are traditionally underrepresented with essential computing tools and multidisciplinary opportunities.</p>
+      <p>Computer Science Principles was created with significant support from the National Science Foundation. The rigorous process of development and testing has yielded a course that not only reflects the latest scholarship in the field, but provides students with a relevant and engaging learning experience.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+  <div class="w3-quarter w3-section">
+  </div>
+</div>
+
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">STUDENTS</span>
+  </div>
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div class="w3-content w3-container w3-padding-64" id="portfolio">
+  <h3 class="w3-center">STUDENT PAGES</h3>
+  <p class="w3-center"><em>Here are the student websites.<br> Click on the images to explore more.</em></p><br>
+
+  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src="/my_website/images/cat.jpg" title="Day2-Sratch Program" style="width:100%" onclick="window.open('https://scratch.mit.edu/projects/166760010/')" class="w3-hover-opacity" alt="Scratch Starter Project">
+      <h3>Day 2-Scratch Program</h3>
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/my_website/images/soccergame.gif" title="Day3-Downlaodable QR" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
+      <h3>Day 3-Downloadable QR</h3>
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/my_website/images/replit.jpg" title="Day4-Repl.it Program" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
+      <h3>Day 4-Repl.it Program</h3>
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/my_website/images/soccer.jpg" title="Day5-Soccer Game AIA" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
+      <h3>Day 5-Soccer Game AIA</h3>    
+    </div>
+  </div>
+
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src="/my_website/images/figure_1-1.jpg" title="Day6-Image Manipulation" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Color Modification">
+      <h3>Day 6-Image Manipulation</h3>
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/my_website/images/Texas_Population_Growth.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Texas Population Growth">
+       <h3>Day 7-Data Manipulation</h3>
+       <h4><a href="Texas_aggregate_1.py" target="_blank">Download data files here....</a></h4>
+    </div>
+
+    <div class="w3-col m3">
+      <img src="/my_website/images/Netlogo.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="NetLogo Simulation">
+      <h3>Day 8 - NetLogo Simulation</h3>
+    </div>
+
+    <div class="w3-col m3">
+      <!--<img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">-->
+    </div>
+    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+  </div>
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">CONTACT</span>
+  </div>
+</div>
+
+<!-- Container (Contact Section) -->
+<div class="w3-content w3-container w3-padding-64" id="contact">
+  <h3 class="w3-center">C.E.King High School</h3>
+  <p class="w3-center"><em>I'd love your feedback!</em></p>
+
+  <div class="w3-row w3-padding-32 w3-section">
+    <div class="w3-col m4 w3-container">
+      <!-- Add Google Maps -->
+      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
+    </div>
+    <div class="w3-col m8 w3-panel">
+      <div class="w3-large w3-margin-bottom">
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Houston, TX<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 281 727 2700<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: chadwhiteley@sheldonisd.com<br>
+      </div>
+      <p>Swing by for a cup of <i class="fa fa-coffee"></i>!<!--, or leave me a note:</p>
+      <form action="/action_page.php" method="POST" target="_blank">
+        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+          </div>
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"><br>
+          </div>
+          <div>
+          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          </div>
+        <button class="w3-button w3-black w3-right w3-section" type="submit">
+          </p><i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </form>-->
+    </div>
+  </div>
+</div> 
+<div>
+  
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+  
+  </div>
+  
+</footer>
+ 
+<!-- Add Google Maps -->
+<script>
+function myMap()
+{
+  myCenter=new google.maps.LatLng(29.848482, -95.207577);
+  var mapOptions= {
+    center:myCenter,
+    zoom:12, scrollwheel: false, draggable: false,
+    mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
+
+  var marker = new google.maps.Marker({
+    position: myCenter,
+  });
+  marker.setMap(map);
+}
+
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-white";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
+    }
+}
+
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPi3shZKl7ySwyW-7oV_X9Qy13JDmXxQo&callback=myMap"></script>
+
+
+</body>
+</html>
